chore: update copy
Update to UK English

--- a/docs/templates/presentation-kits.mdx
+++ b/docs/templates/presentation-kits.mdx
@@ -1,11 +1,11 @@
 ---
-title: Presentation kits
+title: Presentation Kits
 displayed_sidebar: main
 ---
 
 import { ExternalResourceCard, Grid } from '@site/src/components/mdx';
 
-# Presentation kits
+# Presentation Kits
 
 Copy and save as a new presentation with a new title if you plan to make one from the template. Also, make sure to check the Layout pull-down for all the placeholder goodies.
 
