--- a/docs/templates/social-media-assets.mdx
+++ b/docs/templates/social-media-assets.mdx
@@ -1,11 +1,11 @@
 
-# Social media assets
+# Social Media Assets
 
 import { ExternalResourceCard, Grid, Box } from '@site/src/components/mdx';
 
 <Grid xs={{ cols: 1, wrap: true, gap: '16px' }} md={{ cols: 2 }}>
     <Grid.Item xs={1}>
-        <Box top={40} bottom={24}>Network State Press templates</Box>
+        <Box top={40} bottom={24}>Logos Press Engine templates</Box>
         <ExternalResourceCard
             title="Logos templates"
             description="www.figma.com"
@@ -23,7 +23,7 @@ import { ExternalResourceCard, Grid, Box } from '@site/src/components/mdx';
         />
     </Grid.Item>
     <Grid.Item xs={1}>
-        <Box top={40} bottom={24}>Logos podcast templates</Box>
+        <Box top={40} bottom={24}>Logos Podcast templates</Box>
         <ExternalResourceCard
             title="Logos templates"
             description="www.figma.com"
