--- a/docs/visual-language/illustration.mdx
+++ b/docs/visual-language/illustration.mdx
@@ -82,7 +82,7 @@ export const abstractImages = [
     {src: "/illustration/Abstract-49.png", img: require("/illustration/Abstract-49.png") },
 ]
 
-These 3D rendered animations are used to promote Nomos, Waku, Nimbus, and Codex. Each Protocol has its own and can be used in static or animated form. In some cases these statues appear to be previously broken and repaired in the style of Japanese Kintsugi (golden repair). This is a metaphor for the vision of Logos to rebuild the currently broken modern society with the pieces of enlightenment and renaissance ideas.
+These 3D-rendered animations are used to promote Nomos, Waku, Nimbus, and Codex. Each protocol has its own and can be used in static or animated form. In some cases, these statues appear to have been previously broken and repaired in the style of Japanese Kintsugi (golden repair). This is a metaphor for the vision of Logos to rebuild the currently broken modern society with pieces of enlightenment and renaissance ideas.
 
 Codex - data backbone, the archive, Atlas holding up the world
 
@@ -96,13 +96,13 @@ Waku - Prometheus, delivering transformative technology
 
 ## Conceptual
 
-The selected illustration style is detailed, and symmetrical to suggest the subliminal or occult. The artwork can be simplified but should be strong conceptually relating back to one of the concepts.
+The selected illustration style is detailed and symmetrical, suggesting the subliminal or occult. The artwork can be simplified but should be strongly  related back to one of the concepts.
 
 <ImageGrid mode="square-thumbnails" xs={{cols: 2, gap: "16px"}} md={{cols: 4, gap: "16px"}} images={conceptualImages} />
 
 ## Abstract
 
-Texture can be preferable giving a layering or aging effect to the work suggesting time or craft. Many digital illustrations can feel rushed or flat without a subtle texture effect depending upon the execution.
+Texture can be preferable, giving a layering or ageing effect to the work to suggest time or craft. Many digital illustrations can feel rushed or flat without a subtle texture effect, depending upon the execution.
 
 HIO uses these abstracts for the Flash Hash episode covers.
 
