--- a/docs/visual-language/logo.mdx
+++ b/docs/visual-language/logo.mdx
@@ -7,11 +7,11 @@ import { AssetCard } from '@site/src/components/mdx';
 
 # Logo
 
-## Choosing the right mark
+## Choosing the Right Mark
 
-Our mark is the primary brand element on our own properties, such as our websites and products. Here it can stand on its own.
+Our mark is the primary brand element on our own properties, such as our websites and products. Here, it can stand on its own.
 
-When our brand is represented in other contexts, throughout the web or in products we do not own, it is usually best to use a lockup. Please do not edit, change, distort, recolor, or reconfigure the Logos mark. Our mark is the primary brand element on our own properties, such as our websites and products.
+When our brand is represented in other contexts, throughout the web or in products we do not own, it is usually best to use a lockup. Please do not edit, change, distort, recolour, or reconfigure the Logos mark. Our mark is the primary brand element on our own properties, such as our websites and products.
 
 ## Primary Mark
 
@@ -51,7 +51,7 @@ When our brand is represented in other contexts, throughout the web or in produc
 
 ## Lockup — Vertical
 
-These vertical lockups are best used arranged horizontally in a line.
+These vertical lockups are best used horizontally in a line.
 
 <div style={{display: "flex", gap: "16px"}}>
   <AssetCard
@@ -89,7 +89,7 @@ These vertical lockups are best used arranged horizontally in a line.
 
 ## Lockup — Horizontal
 
-These horizontal lockups are best used stacked vertically.
+These horizontal lockups are best stacked vertically.
 
 <div style={{display: "flex", gap: "16px"}}>
   <AssetCard
@@ -125,9 +125,9 @@ These horizontal lockups are best used stacked vertically.
   />
 </div>
 
-## Clearspace
+## Clear Space
 
-When placing the logo, it’s important that it’s given enough space from other elements on the surface it’s presented on. The Clearspace is 50% of the width of the Logos mark. This Clearspace is accounted for as a margin in all our logo assets, so simply mind the edges of the image.
+When placing the logo, it’s important that it’s given enough space from other elements on the surface it’s presented on. The clear space is 50% of the width of the Logos mark. This clear space is accounted for as a margin in all our logo assets, so simply mind the edges of the image.
 
 If you need to define the unit of space, the best way is to measure the bottom of any given mark to the edge of the image or the baseline of the logotype in the lockup to the bottom edge of the image.
 
@@ -137,7 +137,7 @@ If you need to define the unit of space, the best way is to measure the bottom o
 
 Often, our brand marks will be used as a family or in different combinations. All of our marks and lockups are designed to work together. The two major rules here are the consistency of size and the consistency of style.
 
-Hierarchy is determined by the placement order, the most important being left in the case of horizontal layouts, or top in the vertical case. Vertical lockups are used in horizontal layouts and horizontal lockups in vertical layouts.
+Hierarchy is determined by the placement order, the most important being left in the case of horizontal layouts or top in the vertical case. Vertical lockups are used in horizontal layouts, and horizontal lockups in vertical layouts.
 
 - All marks should be the same size
 - Priority is determined by order, not scale
