--- a/docs/visual-language/photography.mdx
+++ b/docs/visual-language/photography.mdx
@@ -60,7 +60,7 @@ export const conceptualImages = [
     { src: "/photography/Conceptual-23.png", img: require("/photography/Conceptual-23.png") },
 ]
 
-We have a unique photography style for each of the following categories; Portraits, Activism, and Conceptual.
+We have a unique photography style for each of the following categories: Portraits, Activism, and Conceptual.
 
 ## Portraits
 
@@ -70,12 +70,12 @@ This style, primarily used for podcast promotion, incorporates black-and-white v
 
 ## Activism
 
-This style is predominantly employed for Network State Press articles and presentations, featuring a black-and-white color scheme. It integrates a journalistic approach with both stock photography and real-life imagery from protests and demonstrations. While a preference is given to free resources, licensed content can also be considered.
+This style is predominantly employed for Logos Press Engine articles and presentations, featuring a black-and-white colour scheme. It integrates a journalistic approach with both stock photography and real-life imagery from protests and demonstrations. While a preference is given to free resources, licensed content can also be considered.
 
 <ImageGrid mode="square-thumbnails" xs={{cols: 2, gap: "16px"}} md={{cols: 4, gap: "16px"}} images={activismImages} />
 
 ## Conceptual
 
-This style is primarily utilized for Network State Press articles and presentations, encompassing a journalistic approach along with the inclusion of stock photography. It is designed to align with fundamental Logos concepts, such as human rights, privacy, and civil liberties. While free resources are preferred, the use of licensed materials can be explored.
+This style is primarily utilised for Logos Press Engine articles and presentations, encompassing a journalistic approach along with the inclusion of stock photography. It is designed to align with fundamental Logos concepts, such as human rights, privacy, and civil liberties. While free resources are preferred, the use of licensed materials can be explored.
 
 <ImageGrid mode="square-thumbnails" xs={{cols: 2, gap: "16px"}} md={{cols: 4, gap: "16px"}} images={conceptualImages} />
