--- a/docs/lsd/design-tokens/Colors.mdx
+++ b/docs/lsd/design-tokens/Colors.mdx
@@ -1,9 +1,9 @@
 ---
-title: Colors
+title: Colours
 ---
 
 import { StorybookDemo } from '@site/src/components/mdx';
 
-# Colors
+# Colours
 
 <StorybookDemo name="Colors" docId="themeprovider--docs" storybookUrl="https://main--63e4f71c39dc65c5c703c1e8.chromatic.com/" storyId="themeprovider--colors" globalTypes={{}} componentProperties={[]} globalControls={["themeColor"]}/>
