--- a/docs/visual-language/grid-and-layout/overview.mdx
+++ b/docs/visual-language/grid-and-layout/overview.mdx
@@ -7,6 +7,6 @@ import DocCardList from '@theme/DocCardList';
 
 # Grid and Layout
 
-At the core of our design philosophy is the belief that good design is functional and accessible. To achieve this, we rely on a grid system that provides a consistent and reliable foundation for all of our designs. Our grid system is not only a tool for organizing content and creating layouts, but also a reflection of our values and principles.
+At the core of our design philosophy is the belief that good design is functional and accessible. To achieve this, we rely on a grid system that provides a consistent and reliable foundation for all of our designs. Our grid system is not only a tool for organising content and creating layouts but also a reflection of our values and principles.
 
 <DocCardList className="DocCardList--no-overview"/>
