--- a/docs/visual-language/grid-and-layout/web-environment.mdx
+++ b/docs/visual-language/grid-and-layout/web-environment.mdx
@@ -26,7 +26,7 @@ Gutter size - 16px.
 
 ![image 1.png](/image_1.png)
 
-### Web grid templates
+### Web Grid Templates
 
 <ExternalResourceCard
     title="Logos templates"
