--- a/docs/visual-language/typography/web-environment.mdx
+++ b/docs/visual-language/typography/web-environment.mdx
@@ -7,10 +7,10 @@ import { StorybookDemo } from '@site/src/components/mdx';
 
 # Web Environments
 
-In our web environments, we lean toward a concept inspired by the decentralized mental model. Instead of imposing a singular font choice, we rely on the default web fonts present on users' browsers and systems. Our strategy offers key advantages:
+In our web environments, we lean toward a concept inspired by the decentralised mental model. Instead of imposing a singular font choice, we rely on the default web fonts present on users' browsers and systems. Our strategy offers key advantages:
 
 1. **Accessibility**: We design in a way that works harmoniously with whatever default font a user's system provides. Our commitment is to ensure that our design retains its integrity and functionality regardless of the specific default font. By not making an overriding decision, we respect the inherent variability and trust that our content will be consistently presented and accessed.
-2. **Optimization**: Bypassing the need for additional font downloads ensures quicker page load times, crucial for those with limited internet bandwidth or in challenging network conditions.
+2. **Optimisation**: Bypassing the need for additional font downloads ensures quicker page load times, which is crucial for those with limited internet bandwidth or in challenging network conditions.
 
 By specifying the font category (serif, sans-serif, or mono) in your CSS, the user's operating system is allowed to determine the best font choice. This approach also guarantees extensive language script support.
 
